--- a/Default.html
+++ b/Default.html
@@ -110,41 +110,42 @@
 				<script type="text/javascript">
 
 				</script>
+				<div class="thanks-for">Thanks for</div>
 				<div class="rt">
 
 						<div id="taglines" class="clearfix">
 						<ul id="tag-collaborate">
-						<li><span></span>Delivering quality, sustainable results</li>
-						<li><span></span>Being a role model for the industry</li>
-						<li><span></span>Caring for our customers, colleagues and the communities we serve</li>
-						<li><span></span>Furthering social and economic development</li>
+						<li><span></span>delivering quality, sustainable results</li>
+						<li><span></span>being a role model for the industry</li>
+						<li><span></span>caring for our customers, colleagues and the communities we serve</li>
+						<li><span></span>furthering social and economic development</li>
 						</ul>
 				
 						<ul id="tag-drive">
-						<li><span></span>Building a legacy</li>
-						<li><span></span>Honouring our principles and keeping promises made</li>
-						<li><span></span>Enchancing AIA's premier reputation through each and every interaction</li>
-                        <li><span></span>Putting company and team before self whilst enjoying our work</li>
+						<li><span></span>building a legacy</li>
+						<li><span></span>honouring our principles and keeping promises made</li>
+						<li><span></span>enchancing AIA's premier reputation through each and every interaction</li>
+                        <li><span></span>putting company and team before self whilst enjoying our work</li>
 						</ul>
 						<ul id="tag-integrity">
-						<li><span></span>Taking responsibility and being accountable</li>
-						<li><span></span>Empowering and developing our people</li>
-						<li><span></span>Being confident to make a difference</li>
-                        <li><span></span>Being the best you can be</li>
+						<li><span></span>taking responsibility and being accountable</li>
+						<li><span></span>empowering and developing our people</li>
+						<li><span></span>being confident to make a difference</li>
+                        <li><span></span>being the best you can be</li>
 						</ul>
 
 						<ul id="tag-play">
-						<li><span></span>Thanks for being curious and trying something new...</li>
-						<li><span></span>Thanks for making a great idea happen...</li>
-						<li><span></span>Thanks for making the impossible, possible...</li>
-						<li><span></span>Thanks for experimenting, "Playing" and trying out new ideas...</li>
-                        <li><span></span>Thanks for...</li>
+						<li><span></span>thanks for being curious and trying something new...</li>
+						<li><span></span>thanks for making a great idea happen...</li>
+						<li><span></span>thanks for making the impossible, possible...</li>
+						<li><span></span>thanks for experimenting, "Playing" and trying out new ideas...</li>
+                        <li><span></span>thanks for...</li>
 						</ul>
 
 						<ul id="tag-wow">
-						<li><span></span>You "Wow"-ed me when you...</li>
-						<li><span></span>Thanks for making the ordinary extraordinary...</li>
-                        <li><span></span>Thanks for...</li>
+						<li><span></span>you "Wow"-ed me when you...</li>
+						<li><span></span>thanks for making the ordinary extraordinary...</li>
+                        <li><span></span>thanks for...</li>
 						</ul>
 					</div>
 					<fieldset class="drive">
@@ -166,7 +167,7 @@
 							<li id="sender-name">
 								<label>From</label>
 								<div class="input-holder">
-								<input type="text" placeholder="Recipient name" tabindex="3" title="SENDER NAME" id="sender-name_id" value="" name="From">
+								<input type="text" placeholder="Sender's name" tabindex="3" title="SENDER NAME" id="sender-name_id" value="" name="From">
 								</div> 
 							</li>
 						</ul>
